# electora-bot

./: LICENSE  README.md  bot.dockerfile  docker-compose.override.production.yml  docker-compose.override.yml  docker-compose.yml  env-example  env.example  k8s.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yaml
electora_bot/: __init__.py  __main__.py  bot.py
electora_bot/cogs/: admin.py  ballot.py  greeter.py
